<resources>
    <string name="app_name">TripPlanner</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="facebook_app_id">157276728268909</string>
    <string name="fb_login_protocol_scheme">fb157276728268909</string>

    <string name="static_map_key">AIzaSyCw_w2LB0TTREWDbUotVkgzHNjDGHTSqHk</string>

    <string name="action_settings">Settings</string>
    <string name="directions_key">AIzaSyD-myWoslrUR5lcEZ2p_75-Jxs_0aWBrOg</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Trip_prompt">Choose Status Of Trip</string>
    <string-array name="Trip_arrays">
        <item>No Repeat</item>
        <item>Repeat Daily</item>
        <item>Repeat weekly</item>
        <item>Repeat Monthly</item>
    </string-array>

    <string name="Trip_prompt2">Choose type of trip</string>
    <string name="msg_token_fmt">msg_token_fmt</string>
    <string name="upcoming_trips">Upcoming Trips</string>
    <string name="addtrip">Add Trip</string>
    <string name="addnote">add note</string>
    <string name="addnote1">addnote</string>
    <string name="addnote2">Add Note</string>
    <string name="welcome">welcome</string>
    <string name="email">mail</string>
    <string name="email_hint">hint</string>
    <string name="password_hint">phint</string>
    <string name="password">pass</string>
    <string name="logout">logout</string>
    <string name="delet">d</string>
    <string name="edit">e</string>
    <string name="addnotes" />
    <string name="view">v</string>
    <string name="Eventname">e</string>
    <string name="start_point">s</string>
    <string name="end_point">e</string>
    <string name="date_time">d</string>
    <string name="start">d</string>
    <string name="TripName">Trip Name</string>
    <string name="StartPoint">Start Point</string>
    <string name="EndPint">End Point</string>
    <string name="DateAndTime"><![CDATA[Date & Time]]></string>
    <string name="Status">Trip Status</string>
    <string name="Notes">Notes</string>
    <string name="Start">Start</string>
    <string name="EditTrip">EditTrip</string>
    <string name="editTrip">Edit Trip</string>
    <string name="ViewT">View Details</string>
    <string name="viewT">View Details</string>
    <string name="AddNotes">Add Notes</string>
    <string name="deleteTrip">Delete</string>
    <string name="startTrip">Start</string>
    <string name="Change">Change</string>
    <string name="save_changes">Save Changes</string>
    <string name="showPast">Past Trips</string>
    <string name="Welcome">Welcome To Trip Planner</string>
    <string name="Email">Email</string>
    <string name="pass">password</string>
    <string name="login">login</string>
    <string name="login_btn">login_btn</string>
    <string-array name="Trip_arrays2">
        <item>One Way Trip</item>
        <item>Round Trip</item>
    </string-array>

    <style name="SplashTheme" parent="Theme.AppCompat.NoActionBar">
        <item name="android:windowBackground">@drawable/splash_background</item>
    </style>

</resources>
