<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color"
    tools:context=".EditActivity">


    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/TripName"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/StartPoint"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/tripname_edit"
        app:layout_constraintTop_toBottomOf="@+id/tripname_edit" />

    <EditText
        android:id="@+id/tripname_edit"
        android:layout_width="373dp"
        android:layout_height="42dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Name"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <AutoCompleteTextView
        android:id="@+id/SP_edit"
        android:layout_width="371dp"
        android:layout_height="49dp"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/EndPint"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/SP_edit"
        app:layout_constraintTop_toBottomOf="@+id/SP_edit" />

    <AutoCompleteTextView
        android:id="@+id/EP_edit"
        android:layout_width="371dp"
        android:layout_height="51dp"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toStartOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="111dp"
        android:layout_height="33dp"
        android:layout_marginTop="20dp"
        android:text="@string/DateAndTime"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/EP_edit"
        app:layout_constraintTop_toBottomOf="@+id/EP_edit" />

    <TextView
        android:id="@+id/date_edit"
        android:layout_width="223dp"
        android:layout_height="34dp"
        android:layout_marginTop="16dp"
        android:text="TextView"
        app:layout_constraintStart_toStartOf="@+id/textView9"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <TextView
        android:id="@+id/time_edit"
        android:layout_width="220dp"
        android:layout_height="38dp"
        android:layout_marginTop="16dp"
        android:text="TextView"
        app:layout_constraintStart_toStartOf="@+id/date_edit"
        app:layout_constraintTop_toBottomOf="@+id/date_edit" />

    <Button
        android:id="@+id/Change_date"
        android:layout_width="104dp"
        android:layout_height="43dp"
        android:background="@color/color"
        android:text="@string/Change"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/date_edit"
        app:layout_constraintTop_toTopOf="@+id/date_edit" />

    <Button
        android:id="@+id/Change_time"
        android:layout_width="107dp"
        android:layout_height="41dp"
        android:layout_marginTop="8dp"
        android:background="@color/color"
        android:text="@string/Change"
        app:layout_constraintStart_toStartOf="@+id/Change_date"
        app:layout_constraintTop_toBottomOf="@+id/Change_date" />

    <Button
        android:id="@+id/save_changes"
        android:layout_width="243dp"
        android:layout_height="42dp"
        android:layout_marginTop="44dp"
        android:background="@color/color"
        android:text="@string/save_changes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/time_edit" />

</androidx.constraintlayout.widget.ConstraintLayout>