<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="20dp"
    android:background="@color/color"
    app:cardCornerRadius="30dp"
    app:cardElevation="10dp"
    app:cardMaxElevation="10dp"
    app:contentPadding="10dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_goneMarginBottom="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/prow"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView_pEN"
            android:layout_width="112dp"
            android:layout_height="40dp"
            android:layout_marginTop="4dp"
            android:background="#E2CBE6"
            android:text="@string/Eventname"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.106"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView_pSP"
            android:layout_width="226dp"
            android:layout_height="35dp"
            android:layout_marginTop="8dp"
            android:text="@string/start_point"
            app:layout_constraintStart_toStartOf="@+id/textView_pEN"
            app:layout_constraintTop_toBottomOf="@+id/textView_pEN" />

        <TextView
            android:id="@+id/textView_pEP"
            android:layout_width="194dp"
            android:layout_height="25dp"
            android:layout_marginTop="12dp"
            android:text="@string/end_point"
            app:layout_constraintStart_toStartOf="@+id/textView_pSP"
            app:layout_constraintTop_toBottomOf="@+id/textView_pSP" />

        <TextView
            android:id="@+id/textView_pDT"
            android:layout_width="183dp"
            android:layout_height="36dp"
            android:layout_marginTop="12dp"
            android:text="@string/date_time"
            app:layout_constraintStart_toStartOf="@+id/textView_pEP"
            app:layout_constraintTop_toBottomOf="@+id/textView_pEP" />

        <Button
            android:id="@+id/button_pOptions"
            android:layout_width="38dp"
            android:layout_height="38dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:background="@drawable/button_bg_round"
            android:text="x"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>
